--- a/pages/purchases.html
+++ b/pages/purchases.html
@@ -88,3 +88,83 @@
     </div>
 </div>
 
+<style>
+.purchases-container {
+    max-width: 1200px;
+    margin: 2rem auto;
+    padding: 0 2rem;
+}
+
+.summary-cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 2rem;
+    margin-bottom: 3rem;
+}
+
+.summary-card {
+    background: rgba(44, 62, 80, 0.3);
+    border-radius: 15px;
+    padding: 2rem;
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+    transition: all 0.3s ease;
+}
+
+.summary-card:hover {
+    transform: translateY(-5px);
+    background: rgba(44, 62, 80, 0.5);
+}
+
+.card-icon {
+    width: 60px;
+    height: 60px;
+    background: var(--deep-orange);
+    border-radius: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5rem;
+    color: white;
+}
+
+.card-info h3 {
+    font-size: 1.8rem;
+    color: var(--light);
+    margin-bottom: 0.5rem;
+}
+
+.card-info p {
+    color: var(--gray);
+}
+
+.purchase-history {
+    background: rgba(44, 62, 80, 0.3);
+    border-radius: 15px;
+    padding: 2rem;
+}
+
+.purchase-history h2 {
+    color: var(--light);
+    margin-bottom: 2rem;
+    font-size: 1.5rem;
+}
+
+.purchases-list {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+.purchase-card {
+    background: rgba(255, 255, 255, 0.05);
+    border-radius: 12px;
+    padding: 1.5rem;
+    transition: all 0.3s ease;
+}
+
+.purchase-card:hover {
+    transform: translateX(5px);
+    background: rgba(255, 255, 255, 0.08);
+}
