--- a/pages/purchases.html
+++ b/pages/purchases.html
@@ -269,3 +269,39 @@
     justify-content: center;
     margin: 0 auto 2rem;
 }
+
+.empty-icon i {
+    font-size: 2.5rem;
+    color: var(--deep-orange);
+}
+
+.empty-state h3 {
+    color: var(--light);
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+.empty-state p {
+    color: var(--gray);
+    margin-bottom: 2rem;
+    font-size: 1.1rem;
+}
+
+.cta-button {
+    display: inline-flex;
+    align-items: center;
+    gap: 0.8rem;
+    padding: 1rem 2rem;
+    background: var(--deep-orange);
+    color: white;
+    text-decoration: none;
+    border-radius: 8px;
+    transition: all 0.3s ease;
+}
+
+.cta-button:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 4px 12px rgba(211, 84, 0, 0.2);
+}
+</style>
+{% endblock %} 
