--- a/pages/userprofile.html
+++ b/pages/userprofile.html
@@ -30,3 +30,16 @@
         </div>
     </div>
 
+<!-- Twitter-style Tabs -->
+    <div class="profile-tabs">
+        <div class="tabs-container">
+            <button class="tab-btn active" data-tab="latest">
+                Latest Campaigns
+                <div class="tab-indicator"></div>
+            </button>
+            <button class="tab-btn" data-tab="finished">
+                Finished Campaigns
+                <div class="tab-indicator"></div>
+            </button>
+        </div>
+    </div>
