--- a/pages/userprofile.html
+++ b/pages/userprofile.html
@@ -30,7 +30,7 @@
         </div>
     </div>
 
-<!-- Twitter-style Tabs -->
+    <!-- Twitter-style Tabs -->
     <div class="profile-tabs">
         <div class="tabs-container">
             <button class="tab-btn active" data-tab="latest">
@@ -43,3 +43,43 @@
             </button>
         </div>
     </div>
+
+    <!-- Tab Content -->
+    <div class="tab-content">
+        <!-- Latest Campaigns Tab -->
+        <div class="tab-pane active" id="latest-campaigns">
+            <div class="campaign-list">
+                <!-- Sample Campaign Items -->
+                <div class="campaign-item">
+                    <div class="campaign-info">
+                        <h3>Help with Medical Bills</h3>
+                        <p>Need assistance with unexpected medical expenses...</p>
+                        <div class="campaign-meta">
+                            <span><i class="fas fa-clock"></i> 2 days ago</span>
+                            <span><i class="fas fa-heart"></i> €500 raised</span>
+                        </div>
+                    </div>
+                </div>
+                <!-- Add more campaign items as needed -->
+            </div>
+        </div>
+
+        <!-- Finished Campaigns Tab -->
+        <div class="tab-pane" id="finished-campaigns">
+            <div class="campaign-list">
+                <!-- Sample Finished Campaign Items -->
+                <div class="campaign-item finished">
+                    <div class="campaign-info">
+                        <h3>Laptop for School</h3>
+                        <p>Successfully raised funds for a new laptop...</p>
+                        <div class="campaign-meta">
+                            <span><i class="fas fa-check-circle"></i> Completed</span>
+                            <span><i class="fas fa-heart"></i> €800 raised</span>
+                        </div>
+                    </div>
+                </div>
+                <!-- Add more finished campaign items as needed -->
+            </div>
+        </div>
+    </div>
+</div>
