--- a/pages/userprofile.html
+++ b/pages/userprofile.html
@@ -83,3 +83,297 @@
         </div>
     </div>
 </div>
+<style>
+    .profile-page {
+        padding: 1rem;
+    }
+
+    .profile-header {
+        background: rgba(44, 62, 80, 0.3);
+        border-radius: 15px;
+        overflow: hidden;
+        margin-bottom: 2rem;
+        padding: 2rem;
+    }
+
+    .profile-top-section {
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
+        gap: 2rem;
+        margin-bottom: 2rem;
+    }
+
+    .profile-main-content {
+        display: flex;
+        align-items: center;
+        gap: 2rem;
+    }
+
+    .profile-avatar-large {
+        width: 120px;
+        height: 120px;
+        background: var(--deep-orange);
+        border: 4px solid var(--dark);
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 3rem;
+        color: white;
+    }
+
+    .profile-name-section {
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+    }
+
+    .name-and-badge {
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+        flex-wrap: wrap;
+    }
+
+    .name-and-badge h2 {
+        margin: 0;
+        font-size: 1.8rem;
+        color: var(--light);
+    }
+
+    .username {
+        color: var(--gray);
+        font-size: 1rem;
+    }
+
+    .trust-badge {
+        display: inline-flex;
+        align-items: center;
+        gap: 0.3rem;
+        padding: 0.3rem 0.8rem;
+        border-radius: 20px;
+        font-size: 0.9rem;
+    }
+
+    /* Trust Badge Colors */
+    .trust-badge.bronze {
+        background: #cd7f32;
+        color: white;
+    }
+
+    .trust-badge.silver {
+        background: #c0c0c0;
+        color: #2c3e50;
+    }
+
+    .trust-badge.gold {
+        background: #ffd700;
+        color: #2c3e50;
+    }
+
+    .trust-badge.platinum {
+        background: #e5e4e2;
+        color: #2c3e50;
+    }
+
+    .trust-badge.diamond {
+        background: linear-gradient(45deg, #b9f2ff, #a3e4ff);
+        color: #2c3e50;
+    }
+
+    .profile-info-bar {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        gap: 1rem;
+        padding-top: 1rem;
+        border-top: 1px solid rgba(255, 255, 255, 0.1);
+    }
+
+    .bio-section {
+        flex: 1;
+        color: var(--gray);
+        font-size: 0.95rem;
+        line-height: 1.5;
+        max-width: 600px;
+    }
+
+    .edit-profile-btn {
+        background: var(--deep-orange);
+        border: none;
+        padding: 0.5rem 1rem;
+        border-radius: 8px;
+        color: white;
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        font-size: 0.9rem;
+        height: fit-content;
+    }
+
+    .edit-profile-btn:hover {
+        background: var(--accent);
+        transform: translateY(-2px);
+    }
+
+    /* Twitter-style Tabs */
+    .profile-tabs {
+        margin-top: 1rem;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    }
+
+    .tabs-container {
+        display: flex;
+        gap: 1rem;
+        max-width: 600px;
+    }
+
+    .tab-btn {
+        background: none;
+        border: none;
+        color: var(--gray);
+        padding: 1rem 1.5rem;
+        font-size: 1rem;
+        cursor: pointer;
+        position: relative;
+        transition: all 0.3s ease;
+    }
+
+    .tab-btn:hover {
+        color: var(--light);
+    }
+
+    .tab-btn.active {
+        color: var(--light);
+        font-weight: 500;
+    }
+
+    .tab-indicator {
+        position: absolute;
+        bottom: -1px;
+        left: 0;
+        width: 100%;
+        height: 4px;
+        background: var(--deep-orange);
+        border-radius: 4px 4px 0 0;
+        transform: scaleX(0);
+        transition: transform 0.3s ease;
+    }
+
+    .tab-btn.active .tab-indicator {
+        transform: scaleX(1);
+    }
+
+    /* Campaign List Styles */
+    .tab-content {
+        margin-top: 1rem;
+    }
+
+    .tab-pane {
+        display: none;
+    }
+
+    .tab-pane.active {
+        display: block;
+    }
+
+    .campaign-list {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .campaign-item {
+        background: rgba(44, 62, 80, 0.3);
+        border-radius: 12px;
+        padding: 1.5rem;
+        transition: all 0.3s ease;
+    }
+
+    .campaign-item:hover {
+        background: rgba(44, 62, 80, 0.5);
+    }
+
+    .campaign-info h3 {
+        margin-bottom: 0.5rem;
+        color: var(--light);
+    }
+
+    .campaign-info p {
+        color: var(--gray);
+        margin-bottom: 1rem;
+    }
+
+    .campaign-meta {
+        display: flex;
+        gap: 1rem;
+        color: var(--gray);
+        font-size: 0.9rem;
+    }
+
+    .campaign-meta span {
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+    }
+
+    .campaign-item.finished .campaign-meta span:first-child {
+        color: var(--success);
+    }
+
+    @media (max-width: 768px) {
+        .profile-header {
+            padding: 1rem;
+        }
+
+        .profile-top-section {
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+        }
+
+        .profile-main-content {
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .name-and-badge {
+            justify-content: center;
+        }
+
+        .edit-profile-btn {
+            width: auto;
+        }
+
+        .profile-avatar-large {
+            margin: 0 auto;
+        }
+
+        .profile-info-bar {
+            flex-direction: column;
+            align-items: stretch;
+        }
+
+        .bio-section {
+            text-align: center;
+        }
+
+        .edit-profile-btn {
+            margin-top: 0.5rem;
+        }
+
+        .tabs-container {
+            width: 100%;
+        }
+
+        .tab-btn {
+            flex: 1;
+            padding: 1rem 0.5rem;
+            font-size: 0.9rem;
+        }
+    }
+</style>
