--- a/pages/notifications.html
+++ b/pages/notifications.html
@@ -4,7 +4,7 @@
 <div class="notifications-page">
     <!-- Back Button -->
     <div class="back-section">
-        <a href="{{ url_for('dashboard') }}" class="back-button">
+        <a href="base.html" class="back-button">
             <i class="fas fa-arrow-left"></i>
             <span>Back to Dashboard</span>
         </a>
@@ -176,50 +176,6 @@
             justify-content: center;
         }
     }
-
-    /* New Toast Styling */
-    .toast {
-        position: fixed;
-        bottom: 20px;
-        right: 20px;
-        background: rgba(39, 174, 96, 0.9);
-        color: white;
-        padding: 12px 24px;
-        border-radius: 8px;
-        display: flex;
-        align-items: center;
-        gap: 8px;
-        z-index: 1000;
-        animation: slideIn 0.3s ease, fadeOut 0.3s ease 2.7s;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-        backdrop-filter: blur(8px);
-    }
-
-    .toast i {
-        font-size: 1.2rem;
-    }
-
-    @keyframes slideIn {
-        from {
-            transform: translateX(100%);
-            opacity: 0;
-        }
-        to {
-            transform: translateX(0);
-            opacity: 1;
-        }
-    }
-
-    @keyframes fadeOut {
-        from {
-            transform: translateX(0);
-            opacity: 1;
-        }
-        to {
-            transform: translateX(100%);
-            opacity: 0;
-        }
-    }
 </style>
 
 <script>
@@ -309,21 +265,14 @@ document.addEventListener('DOMContentLoaded', function() {
 
     // Toast message function
     function showToast(message) {
-        // Remove any existing toasts
-        const existingToast = document.querySelector('.toast');
-        if (existingToast) {
-            existingToast.remove();
-        }
-
         const toast = document.createElement('div');
-        toast.className = 'toast';
+        toast.className = 'toast success';
         toast.innerHTML = `
             <i class="fas fa-check-circle"></i>
             <span>${message}</span>
         `;
         document.body.appendChild(toast);
 
-        // Remove toast after animation completes
         setTimeout(() => {
             toast.remove();
         }, 3000);
